Up to Java 25 and records and stuff